# Hebrew_Transcriber_Translator

./: .coverage  .gitignore  Hebrew_Transcriber_Translator.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
src/transklate/: transklate.py
tests/: test_transklate.py
