[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transklate"
version = "0.0.0"
dependencies = [
    # A faire
    "newick==1.9.*",
    "click==8.0.*",
    "scipy==1.14.*",
    "numpy==2.1.*",
    "networkx==3.4.*"
]
requires-python = ">=3.9"
authors = [
  {name = "Frédérique Michèle Rey", email = "frederique.rey@univ-lorraine.fr"},
]
maintainers = [
  {name = "Frédérique Michèle Rey", email = "frederique.rey@univ-lorraine.fr"},
]
description = "OCRise PDF in hebrew to txt and translate them"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["OCR", "transcribe", "hebrew", "translation"]
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
# A revoir
compute = "stemmadist:main.compute"

[project.optional-dependencies]
# A revoir
ci = [
"pytest==8.3.*",
]